crates/splot-cli/tests/snapshots/inspect_snapshots__film-grain.av2.snap
---
source: crates/splot-cli/tests/inspect_snapshots.rs
expression: "inspect_json(\"film-grain.av2\")"
---
[
  {
    "index": 0,
    "byte_offset": 1,
    "size": 1,
    "payload_len": 0,
    "payload_status": {
      "status": "parsed",
      "syntax": "temporal_delimiter_obu",
      "feature": "AV2-5.5-TEMPORAL-DELIMITER"
    },
    "header": {
      "has_header_extension": false,
      "obu_type": "TemporalDelimiter",
      "temporal_layer_id": 0,
      "embedded_layer_id": 0,
      "extended_layer_id": 31,
      "header_size_bytes": 1
    }
  },
  {
    "index": 1,
    "byte_offset": 3,
    "size": 11,
    "payload_len": 10,
    "payload_status": {
      "status": "parsed",
      "syntax": "sequence_header_obu",
      "feature": "AV2-5.4-SEQUENCE-HEADER"
    },
    "sequence_header": {
      "seq_header_id": 0,
      "seq_profile_idc": 0,
      "single_picture_header_flag": true,
      "chroma_format_idc": 0,
      "bit_depth": 10,
      "max_tlayer_id": 0,
      "max_mlayer_id": 0,
      "fully_parsed": true,
      "children": {
        "partition": true,
        "segment": true,
        "intra": true,
        "inter": true,
        "screen_content": true,
        "transform_quant_entropy": true,
        "filter": true,
        "tile": true,
        "film_grain_params_present": true
      }
    },
    "header": {
      "has_header_extension": false,
      "obu_type": "SequenceHeader",
      "temporal_layer_id": 0,
      "embedded_layer_id": 0,
      "extended_layer_id": 0,
      "header_size_bytes": 1
    }
  },
  {
    "index": 2,
    "byte_offset": 15,
    "size": 6,
    "payload_len": 5,
    "payload_status": {
      "status": "parsed",
      "syntax": "film_grain_obu",
      "feature": "AV2-5.14-FILM-GRAIN"
    },
    "film_grain": {
      "fgm_update_flags": 1,
      "fgm_chroma_idc": 0,
      "monochrome": false,
      "updated_slots": [
        0
      ],
      "models": [
        {
          "slot": 0,
          "chroma_scaling_from_luma": false,
          "num_y_points": 0,
          "num_cb_points": 0,
          "num_cr_points": 0,
          "ar_coeff_lag": 0,
          "overlap_flag": false,
          "clip_to_restricted_range": false,
          "film_grain_block_size": false
        }
      ]
    },
    "header": {
      "has_header_extension": false,
      "obu_type": "FilmGrain",
      "temporal_layer_id": 0,
      "embedded_layer_id": 0,
      "extended_layer_id": 0,
      "header_size_bytes": 1
    }
  }
]
