crates/splot-cli/tests/snapshots/inspect_snapshots__frame-header-prefix.av2.snap
---
source: crates/splot-cli/tests/inspect_snapshots.rs
expression: "inspect_json(\"frame-header-prefix.av2\")"
---
[
  {
    "index": 0,
    "byte_offset": 1,
    "size": 1,
    "payload_len": 0,
    "payload_status": {
      "status": "parsed",
      "syntax": "temporal_delimiter_obu",
      "feature": "AV2-5.5-TEMPORAL-DELIMITER"
    },
    "header": {
      "has_header_extension": false,
      "obu_type": "TemporalDelimiter",
      "temporal_layer_id": 0,
      "embedded_layer_id": 0,
      "extended_layer_id": 31,
      "header_size_bytes": 1
    }
  },
  {
    "index": 1,
    "byte_offset": 3,
    "size": 11,
    "payload_len": 10,
    "payload_status": {
      "status": "parsed",
      "syntax": "sequence_header_obu",
      "feature": "AV2-5.4-SEQUENCE-HEADER"
    },
    "sequence_header": {
      "seq_header_id": 0,
      "seq_profile_idc": 0,
      "single_picture_header_flag": true,
      "chroma_format_idc": 0,
      "bit_depth": 10,
      "max_tlayer_id": 0,
      "max_mlayer_id": 0,
      "fully_parsed": true,
      "children": {
        "partition": true,
        "segment": true,
        "intra": true,
        "inter": true,
        "screen_content": true,
        "transform_quant_entropy": true,
        "filter": true,
        "tile": true,
        "film_grain_params_present": true
      }
    },
    "header": {
      "has_header_extension": false,
      "obu_type": "SequenceHeader",
      "temporal_layer_id": 0,
      "embedded_layer_id": 0,
      "extended_layer_id": 0,
      "header_size_bytes": 1
    }
  },
  {
    "index": 2,
    "byte_offset": 15,
    "size": 2,
    "payload_len": 1,
    "payload_status": {
      "status": "prefix_parsed_awaiting_state",
      "syntax": "tile_group_prefix",
      "feature": "AV2-5.19-TILE-GROUP",
      "blocked_on": "active sequence header state"
    },
    "frame_header_prefix": {
      "payload_kind": "frame_header_prefix",
      "prefix_status": "activation_fields_only",
      "cur_mfh_id": 0,
      "seq_header_id_in_frame_header": 0,
      "referenced_sequence_header_id": 0,
      "is_key_frame": true,
      "is_bridge": false,
      "is_regular": false
    },
    "header": {
      "has_header_extension": false,
      "obu_type": "ClosedLoopKey",
      "temporal_layer_id": 0,
      "embedded_layer_id": 0,
      "extended_layer_id": 0,
      "header_size_bytes": 1
    }
  }
]
