crates/splot-cli/tests/snapshots/inspect_snapshots__metadata-group.av2.snap
---
source: crates/splot-cli/tests/inspect_snapshots.rs
expression: "inspect_json(\"metadata-group.av2\")"
---
[
  {
    "index": 0,
    "byte_offset": 1,
    "size": 1,
    "payload_len": 0,
    "payload_status": {
      "status": "parsed",
      "syntax": "temporal_delimiter_obu",
      "feature": "AV2-5.5-TEMPORAL-DELIMITER"
    },
    "header": {
      "has_header_extension": false,
      "obu_type": "TemporalDelimiter",
      "temporal_layer_id": 0,
      "embedded_layer_id": 0,
      "extended_layer_id": 31,
      "header_size_bytes": 1
    }
  },
  {
    "index": 1,
    "byte_offset": 3,
    "size": 14,
    "payload_len": 12,
    "payload_status": {
      "status": "parsed",
      "syntax": "metadata_group_obu",
      "feature": "AV2-5.17.3-METADATA-GROUP"
    },
    "metadata_group": {
      "is_suffix": false,
      "necessity_idc": 0,
      "application_id": 0,
      "unit_count": 1,
      "units": [
        {
          "metadata_type": 1,
          "metadata_type_name": "METADATA_TYPE_HDR_CLL",
          "cancel": false,
          "payload_size": 4,
          "layer_idc": 0
        }
      ]
    },
    "header": {
      "has_header_extension": true,
      "obu_type": "MetadataGroup",
      "temporal_layer_id": 0,
      "embedded_layer_id": 0,
      "extended_layer_id": 31,
      "header_size_bytes": 2
    }
  }
]
